# stock_trader_strategies

./: README.md
dcf/: README.md  plan.md  prompt.md  pyproject.toml
dcf/dcftool/: streamlit_app.py
